# SQL-Connection-Module

./: README.md  pyproject.toml  pytest.ini
examples/: connect.ipynb
scripts/: connect.py
src/sql_connection/: __init__.py
src/sql_connection/core/: base_connector.py  factory.py  utils.py
src/sql_connection/engines/: mysql_connector.py  oracle_connector.py  postgres_connector.py  redshift_connector.py  snowflake_connector.py  sqlite_connector.py  sqlserver_connector.py
tests/: conftest.py  test_errors.py  test_factory.py  test_smoke.py
