[project]
name = "sql-connection-module"
version = "0.1.0"
description = "Enterprise-level OOP connectors for SQL databases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aa lopez" }]
keywords = ["sql", "database", "connector", "oop", "python"]

dependencies = [
  "pandas>=2.0.0"
  # instala los drivers que uses:
  # "psycopg2-binary>=2.9.0",
  # "pymysql>=1.0.3",
  # "pyodbc>=5.0.0",
  # "oracledb>=2.0.0",
  # "snowflake-connector-python>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
